# deckgym-core

./: Cargo.toml  README.md  database.json  electric_generator_diff.txt  fix.sh  pyproject.toml
.claude/skills/implement-cards/: SKILL.md
.claude/skills/migrate-ability-id/: SKILL.md
benches/: play_benchmark.rs
examples/: value_function_ab_test.rs  value_function_grid_search.rs
python/deckgym/: __init__.py
python/deckgym/envs/: __init__.py  ptcgp_env.py
python/deckgym/tests/: test_env.py
python/deckgym_openspiel/: __init__.py  game.py  state.py
src/: ability_ids.rs  card_ids.rs  card_validation.rs  database.rs  deck.rs  effects.rs  encoding.rs  game.rs  lib.rs  python_bindings.rs  simulate.rs  state.rs  temp_deck.rs  tool_ids.rs  tools.rs
src/actions/: apply_abilities_action.rs  apply_action.rs  apply_action_helpers.rs  apply_attack_action.rs  apply_trainer_action.rs  attack_helpers.rs  effect_ability_mechanic_map.rs  effect_mechanic_map.rs  guzma_test.rs  mod.rs  shared_mutations.rs  trainer_mechanic.rs  types.rs
src/actions/abilities/: ability_mechanic.rs  mechanic.rs  mod.rs
src/actions/attacks/: attack_mechanic.rs  mechanic.rs  mod.rs
src/card_logic/: diantha.rs  ilima.rs  mod.rs
src/hooks/: core.rs  counterattack.rs  mod.rs  retreat.rs
src/models/: card.rs  mod.rs
src/move_generation/: attacks.rs  mod.rs  move_generation_abilities.rs  move_generation_trainer.rs
src/players/: expectiminimax_player.rs  mcts_player.rs  mod.rs  weighted_random_player.rs
src/state/: energy.rs  mod.rs  played_card.rs
src/tui/: app.rs  render.rs
tests/: ability_effects_test.rs  apply_actions_test.rs  attack_effects_test.rs  auto_turn_end_test.rs  b1_klefki_test.rs  b1a_cards_test.rs  b2_trainers_test.rs  b2a_cards_test.rs  confusion_test.rs  darkrai_ex_test.rs  encoding_test.rs  game_api_test.rs  gourgeist_test.rs  ilima_test.rs  lucky_ice_pop_test.rs  magneton_test.rs  manual_end_turn_test.rs  may_trainer_test.rs  mesagoza_test.rs  piers_test.rs  pokemon_center_lady_test.rs  pokemon_mechanics_test.rs  protective_poncho_test.rs  stadium_test.rs  test_auto_draw.rs  test_game_registration.py  test_openspiel_integration.py  test_playthrough.py  test_ptcgp_env.py  test_tensors.py  tools_integration_test.rs
tests/common/: mod.rs
