[package]
name = "deckgym"
version = "0.1.0"
edition = "2021"
default-run = "deckgym"
description = "A high-performance Rust library for simulating Pokémon TCG Pocket games."

[dependencies]
rand = "0.8"
lazy_static = "1.4"
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.11.6"
colored = "3"
chrono = "0.4.39"
indexmap = "2.7.0"
num-format = "0.4.4"
humantime = "2.1.0"
uuid = { version = "1.17.0", features = ["v4", "js"] }
indicatif = "0.18.2"
rayon = "1.10"
csv = { version = "1.3.1", optional = true }
pyo3 = { version = "0.22", optional = true }
strum = "0.27"
strum_macros = "0.27"
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = []
python = ["pyo3", "pyo3/extension-module"]
test-python = ["pyo3", "pyo3/auto-initialize"]
tui = ["ratatui", "crossterm"]
csv-export = ["csv"]

[lib]
name = "deckgym"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "play_benchmark"
harness = false

[[bench]]
name = "card_lookup_benchmark"
harness = false

[[bench]]
name = "rare_candy_benchmark"
harness = false

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "temp_deck_generator"
path = "src/bin/temp_deck_generator.rs"

[[example]]
name = "sylveon_deck_draw_speed"
required-features = ["csv-export"]
