[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "deckgym"
description = "Python bindings for the deckgym-core Pokémon TCG Pocket simulator"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [{ name = "DeckGym Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: AGPL-3.0 License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
keywords = ["pokemon", "tcg", "card-game", "simulation", "ai"]
dynamic = ["version"]
dependencies = [
    "gymnasium>=0.29.1",
    "open_spiel>=1.4.0",
]

[project.urls]
Homepage = "https://www.deckgym.com"
Repository = "https://github.com/deckgym/deckgym-core"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "deckgym"

[dependency-groups]
dev = ["pytest>=8.3.5"]
